# codespaces-blank

./: .gitignore  INSTRUCTIONS.md  README.md  app_cufsm.py  app_streamlit.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
examples/: Beam_Geometry.xlsx  Beam_Master.xlsx  Beam_Stiffness.xlsx  Bracing_Master.xlsx  Master.xlsx  Master_Template.xlsx  Master_Template_FINAL_mount_offset.xlsx  Other_Master.xlsx  SPR_CHECK_Stress.xlsx  Upright_Geometry.xlsx  Upright_Properties.xlsx  cufsm_upright.py  cufsm_upright_model.txt  cufsm_upright_signature.csv  loadchart_archetype.json  pallet_rack.json  rack_example.yaml
out_rfem/: report.md  spr_model.json  validation.md
out_spr/: report.md
rack15512/: __init__.py  analysis.py  base_stiffness.py  beam_stiffness.py  branding.py  buckling_eig.py  builder.py  cf_sections.py  chart_clean.py  cli.py  combos.py  composite.py  cufsm.py  cufsm_mat.py  drive_in.py  dsm.py  dxf_section.py  envelopes.py  export_solvers.py  io_json.py  iviewer.py  library.py  loadcharts.py  master_store.py  master_template.py  master_xlsx.py  model.py  presize.py  project.py  project_run.py  report.py  report_doc.py  report_html.py  results.py  rfem_compare.py  rfem_import.py  section_props.py  seismic.py  seismic_study.py  ui.py  (+1 more)
rackapp/: __init__.py  __main__.py  checks.py  config.py  engine_internal.py  engine_rfem.py  loads.py  model.py  pipeline.py  report.py  results.py  viz.py
tests/: test_app.py  test_base_stiffness.py  test_cf_sections.py  test_checks.py  test_cufsm_mat.py  test_drive_in.py  test_dsm.py  (+24 more)
(+4 files in other folders)
